# x-ego

./: .gitignore  LICENSE  README.md  _vizdoom.ini  cheatsheet.md  check_model_param.py  cursor_bash_error.md  eval_siglip.sh  evaluate_existing_output.py  find_max_contra_accumulate_batches.py  main.py  motivation.md  offset_explain.md  pyproject.toml  run_clip_pipeline.sh  run_embeddings.sh  run_missing_experiment.py  run_performance_over_epoch.py  temp_check_video_all.py  temp_copy_new_map_date_to_server.py  temp_transfer_remote.py  test_all_model_setup.py  test_all_model_setup_contrastive_only.py  test_all_tasks.py  test_all_tasks_after_contra.py  test_dual_head_setup.py  train_all_downstream.py  xego.txt
algorithms/: mappo_cecl.py  masac_cecl.py
configs/: global.yaml
data_module/: base.py  contrastive.py  downstream.py  enemy_location_forecast.py  enemy_location_nowcast.py  linear_probe.py  teammate_location_forecast.py  teammate_location_nowcast.py  teammate_opponent_traj_prediction.py
dataset/: base.py  contrastive.py  downstream.py  enemy_location_forecast.py  enemy_location_nowcast.py  label_creators.py  linear_probe.py  teammate_location_forecast.py  teammate_location_nowcast.py  teammate_opponent_traj_prediction.py
labeler/: README_location_prediction.md  TRAJECTORY_PREDICTION_README.md  base.py  create_mult_agent_future_location_labels.py  create_multi_agent_location_labels.py  debug_test.py  enemy_location_forecast.py  enemy_location_nowcast.py  label_creator.py  teammate_location_forecast.py  teammate_location_nowcast.py  (+1 more)
models/: agent_fuser.py  (+21 more)
(+240 files in other folders)
