[project]
name = "x-ego"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "awpy>=2.0.2",
    "decord>=0.6.0",
    "dotenv>=0.9.9",
    "geomloss>=0.2.6",
    "h5py>=3.14.0",
    "lightning>=2.5.5",
    "omegaconf>=2.3.0",
    "polars>=1.37.1",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "torch>=2.7.0",
    "transformers>=4.56.2",
    "wandb>=0.22.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
